--- a/src/pages/styles/HotelDetailsPage.css
+++ b/src/pages/styles/HotelDetailsPage.css
@@ -57,6 +57,6 @@
 	padding: 0.3em;
 	cursor: pointer;
 	border-radius: 10px;
-	width: 40px,
-	/* margin 0 auto */
+	width: 40px;
+	margin: 0 auto;
 }
