--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -6,7 +6,7 @@
 	z-index: 2;
 	background-color: #fff;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: space-around;
 	box-shadow: 0 0 1em #0003;
 	margin-bottom: 1.5em;
 	top: 0;
