--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -6,7 +6,7 @@
 	z-index: 2;
 	background-color: #fff;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 	box-shadow: 0 0 1em #0003;
 	margin-bottom: 1.5em;
 	top: 0;
@@ -57,7 +57,7 @@
 	font-size: 1rem;
 	width: 7em;
 	margin: 0 solid black;
-	gap: 1.5em;
+	gap: 0.5em;
 	@media (width>760px) {
 		& {
 			flex-direction: row;
