--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -49,6 +49,10 @@
 	}
 }
 
+.header__item {
+	border-radius: 20px;
+}
+
 .header__list {
 	background-color: #222229;
 	color: #fff;
@@ -57,7 +61,7 @@
 	font-size: 1rem;
 	width: 7em;
 	margin: 0 solid black;
-	gap: 0.5em;
+	gap: 1em;
 	@media (width>760px) {
 		& {
 			flex-direction: row;
