--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -51,7 +51,8 @@
 
 .header__item {
 	border-radius: 20px;
-	background-color: aqua;
+	background-color: rgb(220, 235, 235);
+	padding: 10px;
 }
 
 .header__list {
@@ -61,7 +62,7 @@
 	flex-direction: column;
 	font-size: 1rem;
 	width: 7em;
-	margin: 0 solid black;
+	margin: 0 solid;
 	gap: 1em;
 	@media (width>760px) {
 		& {
