--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -52,6 +52,7 @@
 .header__item {
 	background-color: lightgreen;
 	padding: 70px;
+	border: 1px;
 }
 
 .header__list {
@@ -62,7 +63,7 @@
 	font-size: 1rem;
 	width: 7em;
 	margin: 0 solid black;
-	gap: 0.5em;
+	gap: 0.8em;
 	@media (width>760px) {
 		& {
 			flex-direction: row;
