--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -51,8 +51,8 @@
 
 .header__item {
 	background-color: lightgreen;
-	padding: 1px;
-	border: 1px;
+	padding: 2px;
+	border-radius: 1px;
 }
 
 .header__list {
