--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -51,8 +51,8 @@
 
 .header__item {
 	background-color: lightgreen;
-	padding: 1px;
-	border-radius: 1px;
+	padding: 2px;
+	border: 1px;
 }
 
 .header__list {
@@ -61,7 +61,7 @@
 	display: flex;
 	flex-direction: column;
 	font-size: 1rem;
-	width: 7em;
+	width: 8em;
 	margin: 0 solid black;
 	gap: 4em;
 	@media (width>760px) {
