--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -50,7 +50,9 @@
 }
 
 .header__item {
-	background-color: lightgreen;
+	background-color: rgb(64, 20, 220);
+	border-radius: 5px;
+	padding: 5px;
 }
 
 .header__list {
@@ -70,6 +72,6 @@
 }
 
 .nav__close {
-	top: -230px;
+	top: -280px;
 	z-index: -1;
 }
